--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="signup">Sign up</string>
     <string name="powered_by">Powered by</string>
     <string name="parse">Parse</string>
-    <string name="slogan">The world is your wall</string>
+    <string name="slogan">Reading is fun again!</string>
     <string name="title_activity_settings">Settings</string>
     <string name="search_distance">Search Distance</string>
     <string name="logout_full">Log out of Bookmark</string>
