--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,8 @@
     <string name="error_end">.</string>
     <string name="progress_login">Logging you in&#8230;</string>
     <string name="progress_signup">Signing you up&#8230;</string>
+    <string name="add_book">Add new book</string>
+    <string name="save_book">Save book</string>
+    <string name="title">Title</string>
+    <string name="description">Description</string>
 </resources>
