created book detail activity that passes a selected book into the intent, populates new layout with title, description, rating

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,6 @@
     <string name="title">Title</string>
     <string name="description">Description</string>
     <string name="log_out">Log out</string>
+    <string name="rating">Rating</string>
+    <string name="edit_book">Edit book</string>
 </resources>
