--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,5 +33,7 @@
     <string name="rating">Rating</string>
     <string name="edit_book">Edit book</string>
     <string name="title_activity_dashboard">Dashboard</string>
+    <string name="delete_book">Delete book</string>
+    <string name="make_current_title">Make current title</string>
 
 </resources>
