bookdetail activity now can clock reading session times. I am working on making monthly/weekly minute counters function but there is an illegal argument exception not allowing the activity's onCreate method to be successful. see TODO.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,6 @@
     <string name="make_current_title">Make current title</string>
     <string name="minutes_read">Minutes read</string>
     <string name="cover_hint">Press to take a photo of your book cover!</string>
+    <string name="start_reading">Start reading</string>
 
 </resources>
