--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,6 @@
     <string name="cover_hint">Press to take a photo of your book cover!</string>
     <string name="start_reading">Start reading</string>
     <string name="title_activity_graph">GraphActivity</string>
+    <string name="dialog_time_read">Time read</string>
 
 </resources>
