changed add book activity to have new UI, removed ratingbar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,18 +26,20 @@
     <string name="progress_login">Logging you in…</string>
     <string name="progress_signup">Signing you up…</string>
     <string name="add_book">Add new book</string>
-    <string name="save_book">Save book</string>
+    <string name="save_book">Save to My Library</string>
     <string name="title">Title</string>
     <string name="description">Description</string>
     <string name="log_out">Log out</string>
     <string name="rating">Rating</string>
     <string name="edit_book">Edit book</string>
+    <string name="title_hint">Title of this book</string>
+    <string name="description_hint">Your description of this book</string>
     <string name="action_edit_book">Edit book</string>
     <string name="title_activity_dashboard">Dashboard</string>
     <string name="delete_book">Delete book</string>
     <string name="make_current_title">Make current title</string>
     <string name="minutes_read">Minutes read</string>
-    <string name="cover_hint">Press to take a photo of your book cover!</string>
+    <string name="cover_hint">Press to take a photo of your book cover</string>
     <string name="start_reading">Start reading</string>
     <string name="title_activity_graph">GraphActivity</string>
     <string name="dialog_time_read">Time read</string>
