--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
     <string name="app_name">Bookmark</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="login">Log in</string>
-    <string name="signup">Sign up</string>
+    <string name="login">Log in </string>
+    <string name="signup">Register a new account</string>
     <string name="powered_by">Powered by</string>
     <string name="parse">Parse</string>
     <string name="slogan">Reading is fun again!</string>
