--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,5 +45,6 @@
     <string name="dialog_time_read">Time read</string>
     <string name="view_all_logs">View all logs</string>
     <string name="recent_logs">Recent reading logs</string>
+    <string name="delete_log">Delete log</string>
 
 </resources>
