--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="login">Log in </string>
     <string name="signup">Register a new account</string>
-    <string name="powered_by">Powered by</string>
-    <string name="parse">Parse</string>
     <string name="slogan">Reading is fun again!</string>
     <string name="title_activity_settings">Settings</string>
     <string name="search_distance">Search Distance</string>
@@ -21,7 +19,7 @@
     <string name="error_email">Please specify your email address</string>
     <string name="error_blank_username">enter a username</string>
     <string name="error_blank_password">enter a password</string>
-    <string name="error_no_email">no email given</string>
+    <string name="error_no_email">enter an email </string>
     <string name="error_mismatched_passwords">enter the same password twice</string>
     <string name="error_join">", and "</string>
     <string name="error_end">.</string>
